Project

General

Profile

Actions

Bug #20209

closed

YJIT can leak memory by retaining objects with singleton class

Bug #20209: YJIT can leak memory by retaining objects with singleton class

Added by alanwu (Alan Wu) over 2 years ago. Updated over 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:116431]

Description

We've received reports of YJIT causing memory leaks in production Rails apps by keeping objects that have singleton classes alive. The symptom is similar to #19436. We have found a workaround with https://github.com/ruby/ruby/pull/9693 and would like to have it in the next 3.3 point release.

Actions

Also available in: PDF Atom